# rubiks-moves

./: Cargo.toml  README.md
src/: cube.rs  lib.rs  moves.rs
