[package]
description = "A library focusing on processing moves for 3x3 Rubiks cube"
name = "rubiks-moves"
authors = ["Trevor Settles <trevor.settles6@gmail.com>"]
repository = "https://github.com/roboteng/rubiks-moves"
version = "0.0.1"
edition = "2021"
license = "MIT"
keywords = ["rubiks", "cube", "rubiks_cube"]
categories = ["data-structures", "mathematics", "parser-implementations"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
pretty_assertions = "1.3.0"

[dependencies]
itertools = "0.10.5"
nom = "7.1.3"
thiserror = "1.0.38"
